# ros

action_pkg/: CMakeLists.txt  package.xml
action_pkg/action/: PickPlace.action
count_until_action/: CMakeLists.txt  package.xml
count_until_action/action/: CountUntil.action
count_until_action/scripts/: client.py  server.py
drawCircle/: CMakeLists.txt  package.xml
drawCircle/scripts/: draw_circle.py
first/: CMakeLists.txt  package.xml
first/scripts/: my_first_file.py
firstRevise/: CMakeLists.txt  package.xml
firstRevise/scripts/: main.py
first_pkg/: package.xml
first_pkg/scripts/: main.py
fleet_management_controller/: CMakeLists.txt  package.xml
fleet_management_controller/msg/: DroneTelemetry.msg
fleet_management_controller/scripts/: pub.py  sub.py
lab2_task1/: CMakeLists.txt  package.xml
lab2_task1/scripts/: mobile.py  sensor.py
lab2_task2/: CMakeLists.txt  package.xml
lab2_task2/scripts/: battery_reader.py
lab3/: package.xml
lab3/msg/: Custom.msg
learn_action/: CMakeLists.txt  package.xml
learn_action/scripts/: client.py  server.py
pose_subscriber/: CMakeLists.txt  package.xml
pose_subscriber/scripts/: pose_subscriber.py
pub_sub_simple/: CMakeLists.txt  package.xml
pub_sub_simple/scripts/: pub.py  sub.py
pubsub/: CMakeLists.txt  package.xml
pubsub/scripts/: pub.py  sub.py
speed_setter/: CMakeLists.txt  package.xml
speed_setter/scripts/: client.py  server.py
speed_setter/srv/: SetSpeed.srv
ttsim_pubsub/: CMakeLists.txt  package.xml
ttsim_pubsub/scripts/: main.py
turtle_controller/: CMakeLists.txt  package.xml
turtle_controller/scripts/: main.py
