<?xml version="1.0"?>
<package format="2">
  <name>action_pkg</name>

  <version>0.0.0</version>
  <description>The actionPkg package</description>

  <maintainer email="adigen@todo.todo">adigen</maintainer>
  <license>TODO</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for generating and using actions -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Core ROS dependencies -->
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
